--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,1 @@
-<a href="https://www.w3schools.com">Visit W3Schools.com! git checkout -f</a>
+<a href="about">Visit W3Schools.com! git checkout -f</a>
